--- a/index.ipynb
+++ b/index.ipynb
@@ -275,14 +275,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def no_return_full_name():\n",
     "    first_name = 'bob'\n",
     "    last_name = 'smith'\n",
-    "    full_name = first_name + ' ' + last_name"
+    "    full_name = first_name + ' ' + last_name\n",
+    "    return full)na"
    ]
   },
   {
