Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
     "    first_name = 'bob'\n",
     "    last_name = 'smith'\n",
     "    full_name = first_name + ' ' + last_name\n",
-    "    return full)na"
+    "    return full_name"
    ]
   },
   {
