--- a/index.ipynb
+++ b/index.ipynb
@@ -275,15 +275,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def no_return_full_name():\n",
     "    first_name = 'bob'\n",
     "    last_name = 'smith'\n",
-    "    full_name = first_name + ' ' + last_name\n",
-    "    return full_name"
+    "    full_name = first_name + ' ' + last_name\n"
    ]
   },
   {
@@ -304,20 +303,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'bob smith'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "no_return_full_name()"
    ]
